--- a/cullevel3.html
+++ b/cullevel3.html
@@ -41,6 +41,7 @@
     border: 2px solid #000;
     margin-bottom: 12px;
     transition: transform 0.2s ease;
+    margin-left: 10%;
 }
 
 .image-box {
@@ -53,6 +54,7 @@
     position: relative;
     margin-bottom: -19px;
     margin-top: -10px;
+    margin-left: -13%;
 }
 
 .drop-box {
@@ -65,6 +67,7 @@
     font-weight: bold;
     margin-top: 0px;
     font-size: 10px;
+    margin-left: -13%;
 }
 
 #result {
