--- a/foodlevel3.html
+++ b/foodlevel3.html
@@ -26,39 +26,45 @@
             gap: 20px;
         }
         .item {
-            padding: 12px;
-            background-color: lightblue;
-            border-radius: 5px;
-            cursor: grab;
-            font-size: 18px;
-            font-weight: bold;
-            width: 147px;
-            text-align: center;
-            border: 2px solid #000;
-            margin-bottom: 12px;
-        }
-        .image-box {
-            width: 110px;
-            height: 55px;
-            background-size: cover;
-            background-position: center;
-            border: 2px solid #000;
-            border-radius: 10px;
-            position: relative;
-            margin-bottom: -19px;
-            margin-top: -10px;
-        }
-        .drop-box {
-            width: 110px;
-            height: 30px;
-            background-color: white;
-            border: 2px solid black;
-            text-align: center;
-            line-height: 30px;
-            font-weight: bold;
-            margin-top: 0px;
-            font-size: 10px;
-        }
+    padding: 12px;
+    background-color: lightblue;
+    border-radius: 5px;
+    cursor: grab;
+    font-size: 18px;
+    font-weight: bold;
+    width: 147px;
+    text-align: center;
+    border: 2px solid #000;
+    margin-bottom: 12px;
+    transition: transform 0.2s ease;
+    margin-left: 10%;
+}
+
+.image-box {
+    width: 110px;
+    height: 55px;
+    background-size: cover;
+    background-position: center;
+    border: 2px solid #000;
+    border-radius: 10px;
+    position: relative;
+    margin-bottom: -19px;
+    margin-top: -10px;
+    margin-left: -13%;
+}
+
+.drop-box {
+    width: 110px;
+    height: 30px;
+    background-color: white;
+    border: 2px solid black;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    margin-top: 0px;
+    font-size: 10px;
+    margin-left: -13%;
+}
         #result {
             font-size: 20px;
             margin-top: 20px;
