--- a/cullevel1.html
+++ b/cullevel1.html
@@ -50,7 +50,7 @@ h1 {
 
 
 .options button {
-    width: 220px;
+    width: 200px;
     padding: 10px;
     font-size: 16px;
     border-radius: 5px;
@@ -67,6 +67,7 @@ h1 {
     height: 110px;
     object-fit: cover;
     border-radius: 10px;
+   margin-right: -12%;
 }
 
 
