--- a/foodlevel1.html
+++ b/foodlevel1.html
@@ -63,10 +63,11 @@ h1 {
 }
 
 .options img {
-    width: 120px;
-    height: 150px;
+    width: 160px;
+    height: 110px;
     object-fit: cover;
     border-radius: 10px;
+   margin-right: -22%;
 }
 
 
