--- a/foodlevel2.html
+++ b/foodlevel2.html
@@ -190,7 +190,7 @@ function completeLevel2() {
 }
 
 function goToLevel3() {
-    window.location.href = "cullevel3.html";
+    window.location.href = "foodlevel3.html";
 }
 
 
